--- a/index.html
+++ b/index.html
@@ -1,6 +1,93 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+
+<style>
+    body, html {
+        margin: 0;
+        padding: 0;
+        font-family: 'Montserrat', sans-serif;
+        color: white;
+        height: 100%;
+        scroll-behavior: smooth;
+    }
+
+    /* --- Navbar elegante --- */
+    .navbar {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background: rgba(0, 0, 0, 0.35);
+        padding: 15px 60px;
+        z-index: 1000;
+        backdrop-filter: blur(6px);
+    }
+
+    .navbar a {
+        color: white;
+        margin: 0 18px;
+        text-decoration: none;
+        font-weight: 400;
+        letter-spacing: 1px;
+        transition: opacity 0.3s;
+    }
+
+    .navbar a:hover {
+        opacity: 0.6;
+    }
+
+    /* --- HERO (Homepage) con overlay --- */
+    .hero {
+        background-image: url('tua-foto-di-sfondo.jpg');
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+        position: relative;
+    }
+
+    /* Effetto scuro per il contrasto */
+    .hero::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.45);
+    }
+
+    /* --- Testo nella Home --- */
+    .hero h1 {
+        font-size: 64px;
+        margin: 0;
+        font-family: 'Playfair Display', serif;
+        letter-spacing: 3px;
+        z-index: 1;
+        animation: fadeIn 2s ease-in-out;
+    }
+
+    .hero p {
+        font-size: 22px;
+        margin-top: 15px;
+        z-index: 1;
+        font-weight: 300;
+        animation: fadeIn 3s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+</style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matteo Mattielli Fotografo</title>
@@ -107,8 +194,8 @@
 
     <!-- Home -->
     <section id="home" class="hero">
-        <h1>MATTEO MATTIELLI FOTOGRAFO</h1>
-        <p>Fotografia professionale • Versatilità • Esperienza</p>
+        <h1>MATTEO MATTIELLI</h1>
+        <p>Fotografo professionista — Mostre, Progetti, Visioni</p>
     </section>
 
     <!-- Biografia -->
