--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
     }
 
     /* --- Navbar elegante --- */
-    .navbar {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background: rgba(0, 0, 0, 0.35);
-        padding: 15px 60px;
-        z-index: 1000;
-        backdrop-filter: blur(6px);
-    }
+    .nav {
+    position: absolute;
+    top: 20px;
+    right: 50%;
+    transform: translateX(50%);
+}
 
     .navbar a {
         color: white;
