--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     /* --- HERO (Homepage) con overlay --- */
     .hero {
-        background-image: https://imgur.com/a/Lfr81jC;
+        background-image: <a href="https://imgur.com/a/Lfr81jC"></a>;
         background-size: cover;
         background-position: center;
         height: 100vh;
