--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .nav {
     position: absolute;
     top: 20px;
-    center: 30%;
+    margin-right: 50px;
     transform: translateX(50%);
     }
 
