--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     /* --- Navbar elegante --- */
     .navbar a {
-    position: absolute;
+    position: relative;
     top: 20px;
     margin-right: 50px;
     transform: translateX(50%);
