--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     }
 
     /* --- Navbar elegante --- */
-    .navbar a {
-    position: relative;
-    top: 20px;
-    margin-right: 50px;
-    transform: translateX(50%);
+    .navbar nav {
+    display: flex;
+    flex-wrap: wrap;   /* permette di andare a capo se lo spazio finisce */
+    justify-content: flex-end;
     }
 
     .navbar a {
