--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     /* --- HERO (Homepage) con overlay --- */
     .hero {
-        background-image: <a href="https://imgur.com/a/Lfr81jC"></a>;
+        background-image: 480261685_2191526974600122_6900428301038307523_n.jpg;
         background-size: cover;
         background-position: center;
         height: 100vh;
