--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         /* --- Hero (Home) --- */
         .hero {
-            background-image: url('tua-foto-di-sfondo.jpg'); /* Sostituisci con una tua foto */
+            background-image: url('img/ciao.jpg'); /* Sostituisci con una tua foto */
             background-size: cover;
             background-position: center;
             height: 100vh;
