--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
         /* --- Hero (Home) --- */
         .hero {
-            background-image: url('img/ciao.jpg'); /* Sostituisci con una tua foto */
+            background-image: url('/img/ciao.jpg'); /* Sostituisci con una tua foto */
             background-size: cover;
             background-position: center;
             height: 100vh;
