--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.html<!DOCTYPE html>
 <html lang="it">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
@@ -171,7 +171,7 @@
 
         /* --- Hero (Home) --- */
         .hero {
-            background-image: url('/img/ciao.jpg'); /* Sostituisci con una tua foto */
+            background-image: url('/index.html/img/ciao.jpg'); /* Sostituisci con una tua foto */
             background-size: cover;
             background-position: center;
             height: 100vh;
