--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     /* Togli il background grigio solo dalla hero */
 .hero {
     background: url('/SitoProva/img/ciao.jpg') center/cover no-repeat;
-    padding: 80px 10%;          /* se vuoi mantenere il padding */
-    height: 100vh;              /* opzionale, per farla occupare tutto lo schermo */
+    height: 100vh;
+    padding: 80px 10%;
 }
 
 /* Tutte le altre section tornano normali */
