--- a/index.html
+++ b/index.html
@@ -235,31 +235,28 @@ h2 {
 </head>
 <body>
 
-    <!-- Navbar -->
-    <header class="navbar">
-        <div class="logo">MATTEO MATTIELLI</div>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#biografia">Biografia</a>
-            <a href="#lavori">Lavori</a>
-            <a href="#contatti">Contatti</a>
-        </nav>
-    </header>
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <!-- il tuo logo/menu qui -->
+    </nav>
 
-    <!-- Home -->
-    <section id="home" class="hero">
+    <!-- HERO (questa è la parte importante) -->
+    <section class="hero">
         <h1>MATTEO MATTIELLI</h1>
-        <p>Fotografo professionista — Mostre, Progetti, Visioni</p>
     </section>
 
-    <!-- Biografia -->
-    <section id="biografia">
+    <!-- Tutte le altre sezioni che avevi prima (Biografia, Lavori, ecc.) -->
+    <section>
         <h2>Biografia</h2>
-        <p>
-            Qui entrerà il tuo testo biografico: esperienza, formazione, approccio al lavoro,
-            mostre, collaborazioni, filosofia fotografica…
-        </p>
+        <p>…</p>
     </section>
+
+    <section>
+        <h2>Lavori</h2>
+        …
+    </section>
+
+    <!-- eccetera -->
 
     <!-- Lavori -->
     <section id="lavori">
