--- a/index.html
+++ b/index.html
@@ -1,237 +1,13 @@
 .html<!DOCTYPE html>
 <html lang="it">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-
-<style>
-    body, html {
-        margin: 0;
-        padding: 0;
-        font-family: 'Montserrat', sans-serif;
-        color: white;
-        height: 100%;
-        scroll-behavior: smooth;
-    }
-
-   /* --- Navbar principale --- */
-.navbar {
-    position: relative;
-    top: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.35);
-    padding: 15px 5vw;           /* ← questa è la magia */
-    box-sizing: border-box;      /* ← importantissimo */
-    z-index: 1000;
-    backdrop-filter: blur(6px);
-}
-
-/* Opzionale: limiti ragionevoli così non diventa troppo stretto su mobile */
-@media (max-width: 768px) {
-    .navbar {
-        padding: 15px 1.5rem;    /* circa 24px, molto più sicuro */
-    }
-}
-
-@media (min-width: 1400px) {
-    .navbar {
-        padding: 15px 4rem;      /* massimo 64px sui desktop grandi */
-    }
-}
-
-/* Logo */
-.navbar .logo {
-    font-family: 'Playfair Display', serif;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-/* Menu */
-.navbar nav {
-    display: flex;
-    flex-wrap: wrap;       /* permette di andare a capo se lo spazio finisce */
-    gap: 20px;             /* distanza tra le voci */
-    justify-content: flex-end;
-}
-
-/* Voci del menu */
-.navbar nav a {
-    color: white;
-    text-decoration: none;
-    font-weight: 400;
-    letter-spacing: 1px;
-    transition: opacity 0.3s;
-    white-space: nowrap;   /* evita che le parole vadano a capo singolarmente */
-}
-
-.navbar nav a:hover {
-    opacity: 0.6;
-}
-
-/* --- Media Query per tablet e schermi stretti --- */
-@media (max-width: 1024px) {
-    .navbar {
-        padding: 15px 20px;
-    }
-
-    .navbar nav {
-        gap: 12px;         /* riduce leggermente lo spazio tra le voci */
-    }
-}
-
-@media (max-width: 768px) {
-    .navbar nav {
-        flex-wrap: wrap;   /* va a capo se necessario */
-        justify-content: center;
-        margin-top: 10px;
-    }
-}
-    /* Hero con immagine di sfondo a tutto schermo */
-.hero {
-    background: url('/SitoProva/img/ciao.jpg') center/cover no-repeat fixed;  /* ← path esatto per il tuo repo */
-    height: 100vh;  /* occupa tutto lo schermo */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;  /* testo bianco per leggibilità */
-    position: relative;  /* opzionale, per overlay se serve */
-}
-
-/* Contenuto dentro la hero (testo centrato e leggibile) */
-.hero-content {
-    background: rgba(0, 0, 0, 0.5);  /* velo semi-trasparente nero sul testo, opzionale ma bello */
-    padding: 2rem;
-    border-radius: 10px;
-    max-width: 80%;
-}
-
-.hero h1 {
-    font-size: 4rem;
-    margin: 0;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);  /* ombra per far risaltare il testo */
-}
-
-.hero p {
-    font-size: 1.5rem;
-    margin: 1rem 0;
-}
-
-/* Le altre section rimangono grigie, ma puoi renderle semi-trasparente se vuoi l'immagine dietro tutto */
-section {
-    padding: 80px 10%;
-    background: #222;  /* o rgba(34,34,34,0.9) per trasparenza */
-}
-
-section:nth-child(even) {
-    background: #333;  /* o rgba(51,51,51,0.9) */
-}
-
-h2 {
-    margin-top: 0;
-    font-size: 32px;
-    border-bottom: 2px solid white;
-    display: inline-block;
-    padding-bottom: 5px;
-}
-
-    @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(20px); }
-        to { opacity: 1; transform: translateY(0); }
-    }
-</style>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matteo Mattielli Fotografo</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            color: white;
-            height: 100%;
-            scroll-behavior: smooth;
-        }
-
-        /* --- Navbar --- */
-        .navbar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(0, 0, 0, 0.6);
-            padding: 10px 40px;
-            z-index: 1000;
-        }
-
-        .navbar a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .navbar a:hover {
-            text-decoration: underline;
-        }
-
-        /* --- Hero (Home) --- */
-        .hero {
-            background-image: url('/img/ciao.jpg'); /* Sostituisci con una tua foto */
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            flex-direction: column;
-        }
-
-        .hero h1 {
-            font-size: 50px;
-            margin: 0;
-            letter-spacing: 2px;
-            text-shadow: 2px 2px 5px black;
-        }
-
-        .hero p {
-            font-size: 20px;
-            text-shadow: 1px 1px 4px black;
-            margin-top: 10px;
-        }
-
-        /* --- Sezioni generiche --- */
-        section {
-            padding: 80px 10%;
-            background: #222;
-        }
-
-        section:nth-child(even) {
-            background: #333;
-        }
-
-        h2 {
-            margin-top: 0;
-            font-size: 32px;
-            border-bottom: 2px solid white;
-            display: inline-block;
-            padding-bottom: 5px;
-        }
-
-        /* --- Footer --- */
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #111;
-            font-size: 14px;
-        }
-
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matteo Mattielli - Fotografo</title>
+    
+    <!-- ←←← QUESTA RIGA È QUELLA CHE MANCAVA →→→ -->
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
