--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <li><a href="#contatti">Contatti</a></li>
         </ul>
     </nav>
-
+     <div class="hero-container">
+        <div class="sfondo-grigio"></div>
+        <img src="img/ciao.jpg" class="immagine-intermedia" alt="Descrizione">
+        <h1 class="nome">Il Tuo Nome</h1>
+    </div>
     <!-- HERO con la tua foto a tutto schermo -->
     <section class="hero">
         <h1>MATTEO MATTIELLI</h1>
