--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             <li><a href="#contatti">Contatti</a></li>
         </ul>
     </nav>
-     <div class="hero-container">
-        <div class="sfondo-grigio"></div>
-        <img src="img/ciao.jpg" class="immagine-intermedia" alt="Descrizione">
-        <h1 class="nome">Il Tuo Nome</h1>
+    <div class="hero-container">
+    <div class="sfondo-grigio"></div>
+    
+    <img src="img/ciao.jpg" class="immagine-intermedia" alt="Sfondo con immagine">
+    
+    <div class="testo-overlay">
+        <h1 class="nome-principale">Matteo Mattielli</h1> 
+        <p class="sottotitolo-hero">Qui il mio testo di sottotitolo</p> 
     </div>
     <!-- HERO con la tua foto a tutto schermo -->
     <section class="hero">
