--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <nav class="navbar">
         <div class="logo">MATTEO MATTIELLI</div>
-                          <ul class="menu">
+            " &nbsp; &nbsp; &nbsp; &nbsp; "<ul class="menu">
             <li><a href="#lavori">Lavori</a></li>
             <li><a href="#mostre">Mostre</a></li>
             <li><a href="#varie">Varie</a></li>
