--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
         <nav class="navbar">
-        <div class="logo">MATTEO MATTIELLI
-                    <a href="#">MATTEO MATTIELLI</a>
+        <div class="logo">
+          <a href="#">MATTEO MATTIELLI</a>
         </div>
             <ul class="menu">
             <li><a href="#lavori">Lavori</a></li>
