--- a/index.html
+++ b/index.html
@@ -32,14 +32,20 @@
         </div>
     </div> 
                     <section id="lavori">
-        <h2>Lavori</h2>
-        <p>Una selezione dei miei lavori, suddivisi per categorie.</p>
-        <ul>
-            <li><a href="#mostre">Mostre</a></li>
-            <li><a href="#varie">Varie</a></li>
-            <li><a href="#progetti">Progetti Futuri</a></li>
-        </ul>
-    </section>
+    <h2>Lavori</h2>
+    <p>Una selezione dei miei lavori, suddivisi per categorie.</p>
+
+    <div class="galleria-grid">
+        <div class="galleria-item">
+            <img src="img/lavoro-01.jpg" alt="Descrizione lavoro 1">
+        </div>
+        
+        <div class="galleria-item">
+            <img src="img/lavoro-02.jpg" alt="Descrizione lavoro 2">
+        </div>
+
+        </div>
+</section>
 
     <section id="mostre">
         <h2>Mostre</h2>
