--- a/index.html
+++ b/index.html
@@ -1,79 +1,84 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matteo Mattielli - Fotografo</title>
-    <link rel="stylesheet" href="/SitoProva/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matteo Mattielli - Fotografo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-        <nav class="navbar">
-        <div class="logo">
-          <a href="#">MATTEO MATTIELLI</a>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#">MATTEO MATTIELLI</a>
         </div>
-            <ul class="menu">
-            <li><a href="#lavori">Lavori</a></li>
-            <li><a href="#mostre">Mostre</a></li>
-            <li><a href="#varie">Varie</a></li>
-            <li><a href="#progetti">Progetti</a></li>
-            <li><a href="#contatti">Contatti</a></li>
-        </ul>
-    </nav>
-    
-                <div class="hero-container">
-                <div class="sfondo-grigio"></div>
-        
-                <img src="img/ciao1.jpg" class="immagine-intermedia" alt="Sfondo con immagine">
-        
-                <div class="testo-overlay">
-            <h1 class="nome-principale">MATTEO MATTIELLI</h1> 
-            <p class="sottotitolo-hero">Fotografie e Sogni</p> 
-        </div>
-    </div> 
-                    <section id="lavori">
-    <h2>Lavori</h2>
-    <p>Una selezione dei miei lavori, suddivisi per categorie.</p>
+        <ul class="menu">
+            <li><a href="#lavori">Lavori</a></li>
+            <li><a href="#mostre">Mostre</a></li>
+            <li><a href="#varie">Varie</a></li>
+            <li><a href="#progetti">Progetti</a></li>
+            <li><a href="#contatti">Contatti</a></li>
+        </ul>
+    </nav>
+    
+    <!-- ===== HERO CORRETTA ===== -->
+    <section class="hero-container">
+    <div class="slideshow-track">
+        <div class="slide"><img src="img/foto1.jpg" alt="Matteo Mattielli"></div>
+        <div class="slide"><img src="img/foto2.jpg" alt="Fotografia"></div>
+        <div class="slide"><img src="img/foto3.jpg" alt="Ritratto"></div>
+        <div class="slide"><img src="img/foto1.jpg" alt="Matteo Mattielli"></div>
+    </div>
 
-    <div class="galleria-grid">
-        <div class="galleria-item">
-            <img src="img/lavoro-01.jpg" alt="Descrizione lavoro 1">
-        </div>
-        
-        <div class="galleria-item">
-            <img src="img/lavoro-02.jpg" alt="Descrizione lavoro 2">
-        </div>
-
-        </div>
+    <div class="testo-overlay">
+        <h1 class="nome-principale">Matteo Mattielli</h1>
+        <p class="sottotitolo-hero">Fotografo professionista</p>
+    </div>
 </section>
+    <!-- ===== FINE HERO ===== -->
 
-    <section id="mostre">
-        <h2>Mostre</h2>
-        <p>In questa sezione pubblicherò le mostre fotografiche che ho realizzato nel tempo.</p>
-    </section>
+    <section id="lavori">
+        <h2>Lavori</h2>
+        <p>Una selezione dei miei lavori, suddivisi per categorie.</p>
 
-    <section id="varie">
-        <h2>Varie</h2>
-        <p>Una raccolta di fotografie di varia natura, singole o in piccole serie.</p>
-    </section>
+        <div class="galleria-grid">
+            <div class="galleria-item">
+                <img src="img/lavoro-01.jpg" alt="Lavoro 1">
+            </div>
+            <div class="galleria-item">
+                <img src="img/lavoro-02.jpg" alt="Lavoro 2">
+            </div>
+            <!-- aggiungi tutte le altre qui -->
+        </div>
+    </section>
 
-    <section id="progetti">
-        <h2>Progetti Futuri</h2>
-        <p>Idee, sperimentazioni e future direzioni del mio lavoro fotografico.</p>
-    </section>
+    <section id="mostre">
+        <h2>Mostre</h2>
+        <p>In questa sezione pubblicherò le mostre fotografiche che ho realizzato nel tempo.</p>
+    </section>
 
-    <section id="contatti">
-        <h2>Contatti</h2>
-        <p>Per richieste, preventivi o collaborazioni:</p>
-        <p>
-            Email: <a href="mailto:mattielliphotos@gmail.com">mattielliphotos@gmail.com</a><br>
-            Telefono: +39 3492673517
-        </p>
-    </section>
+    <section id="varie">
+        <h2>Varie</h2>
+        <p>Una raccolta di fotografie di varia natura, singole o in piccole serie.</p>
+    </section>
 
-    <footer>
-        © 2025 Matteo Mattielli - Tutti i diritti riservati
-    </footer>
+    <section id="progetti">
+        <h2>Progetti Futuri</h2>
+        <p>Idee, sperimentazioni e future direzioni del mio lavoro fotografico.</p>
+    </section>
+
+    <section id="contatti">
+        <h2>Contatti</h2>
+        <p>Per richieste, preventivi o collaborazioni:</p>
+        <p>
+            Email: <a href="mailto:mattielliphotos@gmail.com">mattielliphotos@gmail.com</a><br>
+            Telefono: +39 349 267 3517
+        </p>
+    </section>
+
+    <footer>
+        © 2025 Matteo Mattielli - Tutti i diritti riservati
+    </footer>
 
 </body>
 </html>
