Add contact and exhibition images, update index.html
Added new images for contacts and exhibitions. Updated index.html to display exhibition years without 'Mostra' prefix and enhanced the contacts section with icons and social media links.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p>In questa sezione pubblicherò le mostre fotografiche che ho realizzato nel tempo.</p>
         
         <div id="mostra-2024" class="exhibition-subsection">
-            <h3>Mostra 2024</h3>
+            <h3>2024</h3>
             <div class="exhibition-grid">
                 <div class="exhibition-item">
                     <img src="img/mostra2024-1.jpg" alt="Mostra 2024 - 1">
@@ -98,7 +98,7 @@
         </div>
 
         <div id="mostra-2023" class="exhibition-subsection">
-            <h3>Mostra 2023</h3>
+            <h3>2023</h3>
             <div class="exhibition-grid">
                 <div class="exhibition-item">
                     <img src="img/mostra2023-1.jpg" alt="Mostra 2023 - 1">
@@ -122,8 +122,11 @@
 
     <section id="contatti">
         <h2>Contatti</h2>
-        <p>Email: <a href="mailto:mattielliphotos@gmail.com">mattielliphotos@gmail.com</a><br>
-        Telefono: +39 349 267 3517</p>
+        <p><img src="img/mail.webp" width="25" style="vertical-align: middle;"> Email: <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=mattielliphotos@gmail.com" target="_blank">
+            mattielliphotos@gmail.com</a><br>
+        <img src="img/telefono.webp" width="25" style="vertical-align: middle;">Telefono: +39 349 267 3517<br>
+        <img src="img/instagram.webp" width="25" style="vertical-align: middle;"> Instagram: <a href="https://www.instagram.com/mattielliphotos/" target="_blank">Mattielli Photos</a><br>
+        <img src="img/facebook.webp" width="25" style="vertical-align: middle;"> Facebook: <a href="https://www.facebook.com/profile.php?id=61572285960295" target="_blank">Matteo Mattielli</a></p>
     </section>
 
     <script src="script.js"></script>
