--- a/Funzionanti/index.html
+++ b/Funzionanti/index.html
@@ -16,15 +16,15 @@
             <li class="dropdown">
                 <a href="#lavori">Lavori</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#ritratti">Ritratti</a></li>
-                    <li><a href="#paesaggi">Paesaggi</a></li>
+                    <li><a href="ritratti.html">Ritratti</a></li>
+                    <li><a href="paesaggi.html">Paesaggi</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#mostre">Mostre</a>
                 <ul class="dropdown-menu">
                     <li><a href="#mostra-2024">Mostra 2024</a></li>
-                    <li><a href="mostra2023.html">Mostra 2023</a></li>
+                    <li><a href="#mostra-2023">Mostra 2023</a></li>
                 </ul>
             </li>
             <li><a href="#varie">Varie</a></li>
@@ -63,24 +63,24 @@
         <div id="ritratti" class="work-subsection">
             <h3>Ritratti</h3>
             <div class="work-grid">
-                <a href="ritratti.html" class="work-item">
+                <div class="work-item">
                     <img src="img/ritratto1.jpg" alt="Ritratto 1">
-                </a>
-                <a href="ritratti.html" class="work-item">
+                </div>
+                <div class="work-item">
                     <img src="img/ritratto2.jpg" alt="Ritratto 2">
-                </a>
+                </div>
             </div>
         </div>
 
         <div id="paesaggi" class="work-subsection">
             <h3>Paesaggi</h3>
             <div class="work-grid">
-                <a href="paesaggi.html" class="work-item">
+                <div class="work-item">
                     <img src="img/paesaggio1.jpg" alt="Paesaggio 1">
-                </a>
-                <a href="paesaggi.html" class="work-item">
+                </div>
+                <div class="work-item">
                     <img src="img/paesaggio2.jpg" alt="Paesaggio 2">
-                </a>
+                </div>
             </div>
         </div>
     </section>
@@ -92,24 +92,24 @@
         <div id="mostra-2024" class="exhibition-subsection">
             <h3>Mostra 2024</h3>
             <div class="exhibition-grid">
-                <a href="mostra-2024.html" class="exhibition-item">
+                <div class="exhibition-item">
                     <img src="img/mostra2024-1.jpg" alt="Mostra 2024 - 1">
-                </a>
-                <a href="mostra-2024.html" class="exhibition-item">
+                </div>
+                <div class="exhibition-item">
                     <img src="img/mostra2024-2.jpg" alt="Mostra 2024 - 2">
-                </a>
+                </div>
             </div>
         </div>
 
         <div id="mostra-2023" class="exhibition-subsection">
             <h3>Mostra 2023</h3>
             <div class="exhibition-grid">
-                <a href="mostra2023.html" class="exhibition-item">
+                <div class="exhibition-item">
                     <img src="img/mostra2023-1.jpg" alt="Mostra 2023 - 1">
-                </a>
-                <a href="mostra2023.html" class="exhibition-item">
+                </div>
+                <div class="exhibition-item">
                     <img src="img/mostra2023-2.jpg" alt="Mostra 2023 - 2">
-                </a>
+                </div>
             </div>
         </div>
     </section>
@@ -126,9 +126,13 @@
 
     <section id="contatti">
         <h2>Contatti</h2>
-        <p style="font-size: 0.9rem;">Email: <a href="mailto:mattielliphotos@gmail.com">mattielliphotos@gmail.com</a><br>
-        Telefono: +39 349 267 3517</p>
+        <p><img src="img/mail.webp" width="25" style="vertical-align: middle;"> Email: <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=mattielliphotos@gmail.com" target="_blank">
+            mattielliphotos@gmail.com</a><br>
+        <img src="img/telefono.webp" width="25" style="vertical-align: middle;"> Telefono: +39 349 267 3517<br>
+        <img src="img/instagram.webp" width="25" style="vertical-align: middle;"> Instagram: <a href="https://www.instagram.com/mattielliphotos/" target="_blank">Mattielli Photos</a><br>
+        <img src="img/facebook.webp" width="25" style="vertical-align: middle;"> Facebook: <a href="https://www.facebook.com/profile.php?id=61572285960295" target="_blank">Matteo Mattielli</a></p>
     </section>
+
 
     <script src="script.js"></script>
 
