Add Mostra 2024 gallery and reorganize images
Created mostra2024.html with a new gallery for the 2024 exhibition and added 25 new images for Mostra 2024. Reorganized image files into category folders (mostra2023, mostra2024, paesaggi, ritratti) and updated references in index.html, mostra2023.html, and ritratti.html to use the new paths. Improved navigation and consistency across exhibition pages.

--- a/ritratti.html
+++ b/ritratti.html
@@ -35,7 +35,7 @@
             </button>
             
             <div class="main-image-container">
-                <img id="mainImage" src="img/ritratto1.jpg" alt="Ritratto 1">
+                <img id="mainImage" src="img/ritratti/ritratto1.jpg" alt="Ritratto 1">
             </div>
             
             <button class="nav-arrow next" onclick="changeImage(1)">
