--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="dropdown">
                 <a href="#mostre">Mostre</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#mostra-2024">Mostra 2024</a></li>
+                    <li><a href="mostra2024.html">Mostra 2024</a></li>
                     <li><a href="mostra2023.html">Mostra 2023</a></li>
                 </ul>
             </li>
@@ -64,10 +64,7 @@
             <h3>Ritratti</h3>
             <div class="work-grid">
                 <a href="ritratti.html" class="work-item">
-                    <img src="img/ritratto1.jpg" alt="Ritratto 1">
-                </a>
-                <a href="ritratti.html" class="work-item">
-                    <img src="img/ritratto2.jpg" alt="Ritratto 2">
+                    <img src="img/ritratti/ritratto1.jpg" alt="Ritratto 1">
                 </a>
             </div>
         </div>
@@ -76,10 +73,7 @@
             <h3>Paesaggi</h3>
             <div class="work-grid">
                 <a href="paesaggi.html" class="work-item">
-                    <img src="img/paesaggio1.jpg" alt="Paesaggio 1">
-                </a>
-                <a href="paesaggi.html" class="work-item">
-                    <img src="img/paesaggio2.jpg" alt="Paesaggio 2">
+                    <img src="img/paesaggi/paesaggio1.jpg" alt="Paesaggio 1">
                 </a>
             </div>
         </div>
@@ -89,26 +83,26 @@
         <h2>Mostre</h2>
         <p>In questa sezione pubblicherò le mostre fotografiche che ho realizzato nel tempo.</p>
         
-        <div id="mostra-2024" class="exhibition-subsection">
+        <div id="mostra2024" class="exhibition-subsection">
             <h3>Mostra 2024</h3>
             <div class="exhibition-grid">
-                <a href="mostra-2024.html" class="exhibition-item">
-                    <img src="img/mostra2024-1.jpg" alt="Mostra 2024 - 1">
+                <a href="mostra2024.html" class="exhibition-item">
+                    <img src="img/mostra2024/mostra2024-1.jpg" alt="Mostra 2024 - 1">
                 </a>
-                <a href="mostra-2024.html" class="exhibition-item">
-                    <img src="img/mostra2024-2.jpg" alt="Mostra 2024 - 2">
+                <a href="mostra2024.html" class="exhibition-item">
+                    <img src="img/mostra2024/mostra2024-2.jpg" alt="Mostra 2024 - 2">
                 </a>
             </div>
         </div>
 
-        <div id="mostra-2023" class="exhibition-subsection">
+        <div id="mostra2023" class="exhibition-subsection">
             <h3>Mostra 2023</h3>
             <div class="exhibition-grid">
                 <a href="mostra2023.html" class="exhibition-item">
-                    <img src="img/mostra2023-1.jpg" alt="Mostra 2023 - 1">
+                    <img src="img/mostra2023/mostra2023-1.jpg" alt="Mostra 2023 - 1">
                 </a>
                 <a href="mostra2023.html" class="exhibition-item">
-                    <img src="img/mostra2023-2.jpg" alt="Mostra 2023 - 2">
+                    <img src="img/mostra2023/mostra2023-2.jpg" alt="Mostra 2023 - 2">
                 </a>
             </div>
         </div>
