Refactor navigation and sections, remove unused files
Updated navigation menus and section layouts to better organize categories such as 'Lavori' and 'Varie', adding new subsections for events. Renamed 'Mostra 2023' to 'Da 100 a 0' for clarity. Improved grid styling for work and exhibition items. Removed obsolete files: biografia, lavori, varie.

--- a/mostra2023.html
+++ b/mostra2023.html
@@ -15,7 +15,7 @@
         <div class="breadcrumb">
             <a href="index.html">Home</a> / 
             <a href="index.html#mostre">Mostre</a> / 
-            <span>Mostra 2023</span>
+            <span>Da 100 a 0</span>
         </div>
         <div class="category-nav">
             <a href="mostra2024.html">Mostra 2024</a>
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="page-header">
-        <h1>MOSTRA 2023</h1>
+        <h1>Da 100 a 0</h1>
     </div>
 
     <div class="gallery-container">
