--- a/ritratti.html
+++ b/ritratti.html
@@ -45,67 +45,67 @@
 
         <div class="thumbnails-container">
             <div class="thumbnail active" onclick="selectImage(0)">
-                <img src="img/ritratti/ritratto1.jpg" alt="Ritratto 1">
+                <a href="#"><img src="img/ritratti/ritratto1.jpg" alt="Ritratto 1"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(1)">
-                <img src="img/ritratti/ritratto2.jpg" alt="Ritratto 2">
+                <a href="#"><img src="img/ritratti/ritratto2.jpg" alt="Ritratto 2"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(2)">
-                <img src="img/ritratti/ritratto3.jpg" alt="Ritratto 3">
+                <a href="#"><img src="img/ritratti/ritratto3.jpg" alt="Ritratto 3"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(3)">
-                <img src="img/ritratti/ritratto4.jpg" alt="Ritratto 4">
+                <a href="#"><img src="img/ritratti/ritratto4.jpg" alt="Ritratto 4"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(4)">
-                <img src="img/ritratti/ritratto5.jpg" alt="Ritratto 5">
+                <a href="#"><img src="img/ritratti/ritratto5.jpg" alt="Ritratto 5"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(5)">
-                <img src="img/ritratti/ritratto6.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto6.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(6)">
-                <img src="img/ritratti/ritratto7.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto7.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(7)">
-                <img src="img/ritratti/ritratto8.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto8.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(8)">
-                <img src="img/ritratti/ritratto9.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto9.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(9)">
-                <img src="img/ritratti/ritratto10.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto10.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(10)">
-                <img src="img/ritratti/ritratto11.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto11.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(11)">
-                <img src="img/ritratti/ritratto12.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto12.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(12)">
-                <img src="img/ritratti/ritratto13.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto13.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(13)">
-                <img src="img/ritratti/ritratto14.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto14.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(14)">
-                <img src="img/ritratti/ritratto15.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto15.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(15)">
-                <img src="img/ritratti/ritratto16.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto16.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(16)">
-                <img src="img/ritratti/ritratto17.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto17.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(17)">
-                <img src="img/ritratti/ritratto18.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto18.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(18)">
-                <img src="img/ritratti/ritratto19.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto19.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(19)">
-                <img src="img/ritratti/ritratto20.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto20.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(20)">
-                <img src="img/ritratti/ritratto21.jpg" alt="Ritratto 6">
+                <a href="#"><img src="img/ritratti/ritratto21.jpg" alt="Ritratto 6"></a>
             </div>
         </div>
     </div>
